# rust-eq

./: Cargo.toml  README.md
docs/: hacks.css  index.html  presentation.org
src/: direct.rs  main.rs
tests/: new.rs  old.rs
