[package]
name = "rust-eq"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "1.0.91", default-features = false, features = ["parsing", "derive", "extra-traits"] } # TODO: remove extra-traits (it's only used for internal debug prints)
rustc-demangle = "0.1.21"
anyhow = "1.0.56"
clap = { version = "3.1.8", features = ["derive"] }
tempfile = "3"
haybale = { git = "https://github.com/Shizcow/haybale" }
llvm-ir = "0.8.1"
itertools = "0.10.3"
boolector = "0.4.3"

[features]
# Passthroughs to haybale
llvm-9 = ["haybale/llvm-9"]
llvm-10 = ["haybale/llvm-10"]
llvm-11 = ["haybale/llvm-11"]
llvm-12 = ["haybale/llvm-12"]
llvm-13 = ["haybale/llvm-13"]
vendor-boolector = ["haybale/vendor-boolector"]